--- a/CallIT.Web/Views/Home/Index.cshtml
+++ b/CallIT.Web/Views/Home/Index.cshtml
@@ -8,10 +8,16 @@
 
 <div class="container">
     <div class="row">
-        <h1>ชื่อเครื่องคอมพิวเตอร์ @machineName</h1>
-        <h1>เลข IP เครื่อง @machineIP</h1>
+        <h2>ชื่อเครื่อง : @machineName</h2>
+        <h2>เลข IP เครื่อง : @machineIP</h2>
     </div>
+    <div>
+        <marquee scrolldelay="5">
 
+            <p style="color:#ff0000;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+
+        </marquee>
+    </div>
     <div class="col-md-6">
         @if (Message.status == "success")
         {
@@ -51,6 +57,7 @@
     </div>
 
     <div class="col-md-6">
+        
         <div class="form-group">
             <!-- Carousel
             ================================================== -->
@@ -59,30 +66,49 @@
                     <div class="item active">
                         <a href="#"><img class="thumbnail" src="http://placehold.it/600x400/" alt="Slide1"></a>
                         <div class="caption">
-                            <h4>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
+                            <h4>สวัสดีr</h4>
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
                         </div>
                     </div>
                     <div class="item">
                         <a href="#"><img class="thumbnail" src="http://placehold.it/600x400/" alt="Slide2"></a>
                         <div class="caption">
-                            <h4>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
+                            <h4>2Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
                         </div>
                     </div>
                     <div class="item">
                         <a href="#"><img class="thumbnail" src="http://placehold.it/600x400/" alt="Slide3"></a>
                         <div class="caption">
-                            <h4>Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
+                            <h4>3Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
                         </div>
                     </div>
+
+                    <div class="item">
+                        <a href="#"><img class="thumbnail" src="http://placehold.it/600x400/" alt="Slide3"></a>
+                        <div class="caption">
+                            <h4>4Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <a href="#"><img class="thumbnail" src="http://placehold.it/600x400/" alt="Slide3"></a>
+                        <div class="caption">
+                            <h4>5Lorem ipsum dolor sit amet, consetetur sadipscing elitr</h4>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+                        </div>
+                    </div>
+
                 </div>
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
                     <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
                 </ol>
             </div><!-- End Carousel -->
         </div>
